@@ -1,3 +1,8 @@
+2012-03-09 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
+	* tag V01-06-23
+	* Update build.xml to include /python source folder in cmssw-evf-confdb-gui.jar
+	* Update start.jnlp script to download all the .jar needed by python parser.
+	
 2012-03-08 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
 	* tag V01-06-22
 	* Add Oracle script to create read-only schemas using dblinks.
